--- a/Assignment04/app/src/main/res/values/strings.xml
+++ b/Assignment04/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Assignment04</string>
+    <string name="firstNumber">First Number</string>
+    <string name="firstNumber2">Second Number</string>
+    <string name="secondNumber">Second Number</string>
+    <string name="answer">Answer Is</string>
 </resources>
