--- a/Assignment05/app/src/main/res/values/strings.xml
+++ b/Assignment05/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="register">Register</string>
     <string name="user_name">Enter your user name</string>
     <string name="todo">TODO</string>
+    <string name="login">Log in</string>
 </resources>
