--- a/Assignment06/app/src/main/res/values/strings.xml
+++ b/Assignment06/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Assignment06</string>
+    <string name="capture_image">Capture Image</string>
+    <string name="take_a_picture">TAKE A PICTURE</string>
 </resources>
