--- a/Assignment06/app/src/main/res/values/strings.xml
+++ b/Assignment06/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Assignment06</string>
-    <string name="capture_image">Capture Image</string>
-    <string name="take_a_picture">TAKE A PICTURE</string>
+    <string name="app_name">Assignment 6</string>
+    <string name="take_picture_label">Take Picture</string>
+    <string name="take_picture_long_label">Capture a photo using the camera</string>
+    <string name="status_bar_text">Photo captured</string>
 </resources>
